# rs_sys_hook

./: .gitignore  Cargo.toml  README.md  build.rs  hook.asm  rustfmt.toml
src/: dynimp.rs  hook.rs  main.rs  structs.rs
